--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/cli": "^20.1.4",
     "@angular/compiler-cli": "^20.1.4",
     "@tauri-apps/cli": "^2",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "prettier": "~3.6.2"
   }
 }
